k8s/ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devops-toolkit
  labels:
    app: devops-toolk
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: devopstoolkitseries.com
    http:
      paths:
      - path: /
        backend:
          serviceName: devops-toolkit
          servicePort: 80
